# AudioProcessTools

./: .gitignore  CMakeLists.txt  CalSpeechDuration.cpp  README.md
scripts/: BatchFFmpeg.sh  CalSpeechDuration.sh
